# hd-mcpservers-docker

./: .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .test_failures_1to160  ALL_MCP_SWEEP_CONCLUSION.md  ALL_MCP_TESTS_SUMMARY.tsv  Instructions.md  PRD.md  README.md  USECASES.md  all-mcp-servers-status.md  all-mcp-servers.csv  bulk-build.txt  docker-compose.yml  generate_phase3.py  instructions.txt  karan-mcp-updates.csv  pentest-mcp.txt  phase1-ai-mcp.txt  phase2-pentest-mcp-list.txt  phase2-pentest-mcp.txt  phase3-mcp.txt  requirements-security.txt  run-all-tests.nohup.out  scan-mcp-server.py  server-status-124-183.md  test_batch.sh  test_failures_1to160  test_single.sh  utkarsh.md  verify-rebuilt-79.nohup.out
tools-to-migrate-to-mcp/mcp-server-code-execution-mode-main/: .gitignore  ARCHITECTURE.md  GUIDE.md  HISTORY.md  README.md  STATUS.md  example_config.json  main.py  mcp.json  mcp_server_code_execution_mode.py  pyproject.toml  requirements.txt
tools-to-migrate-to-mcp/mcp-server-code-execution-mode-main/.kilocode/: mcp.json
tools-to-migrate-to-mcp/mcp-server-code-execution-mode-main/scripts/: hd_mini_test_suite.py  hd_smoke_test_mcp_json.py  hd_test_each_mcp_server.py
tools-to-migrate-to-mcp/mcp-server-code-execution-mode-main/tests/: stub_mcp_server.py  test_config_loading.py  test_entrypoint.py  test_integration.py  test_ipc_stream_limit.py  test_list_tools_metadata.py  test_memory.py  test_no_runtime.py  test_persistence.py  test_resources.py  test_rpc_json_serialization.py  test_server_cwd.py  test_tool_docs.py  (+2 more)
(+3995 files in other folders)
